Fixed Firefox bug with magnifying glass overflowing to the right.

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ a:hover {
 .container-1 .icon {
     position: absolute;
     top: 50%;
+    left: 0;
     margin-left: 17px;
     margin-top: 17px;
     z-index: 1;
